--- a/lexiflux/templates/library.html
+++ b/lexiflux/templates/library.html
@@ -139,12 +139,43 @@
                             <option v-for="lang in languages" :value="lang.google_code">${ lang.name }</option>
                         </select>
                     </div>
-                    <button class="btn btn-primary" @click="saveChanges">Save Changes</button>
+                    <div class="modal-footer justify-content-between">
+                      <button type="button" class="btn btn-outline-danger" @click="showDeleteConfirmation" title="Delete Book">
+                        <i class="bi bi-trash"></i>
+                      </button>
+                      <div>
+                        <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" @click="saveChanges">
+                          <i class="bi bi-check-lg me-1"></i>Save
+                        </button>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <!-- Delete Confirmation Modal -->
+    <div id="deleteConfirmationModal" class="modal fade" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 id="deleteConfirmationModalLabel" class="modal-title">Confirm Delete</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete the book <strong>${ bookCode }</strong>?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-danger" @click="deleteBook">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
+
 
 <script>
     new Vue({
@@ -272,6 +303,32 @@
                 .catch(error => {
                     console.error('Error:', error);
                     this.errorMessage = 'An error occurred while updating the book.';
+                });
+            },
+            showDeleteConfirmation() {
+                // Close the edit modal before showing the confirmation modal
+                bootstrap.Modal.getInstance(document.getElementById('editBookModal')).hide();
+                this.$nextTick(() => {
+                    new bootstrap.Modal(document.getElementById('deleteConfirmationModal')).show();
+                });
+            },
+            deleteBook() {
+                fetch(`/api/books/${this.editedBook.id}/`, {
+                    method: 'DELETE',
+                    headers: {
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    }
+                })
+                .then(response => {
+                    if (response.ok) {
+                        location.reload();
+                    } else {
+                        throw new Error('Failed to delete book');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    this.errorMessage = 'An error occurred while deleting the book.';
                 });
             }
         }
